Optimized some methods