@@ -7,11 +7,11 @@ import com.example.designPatternsProject.repository.HolidayPackageRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import javax.transaction.Transactional;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional
 @RequiredArgsConstructor
 public class HolidayPackageServiceImpl implements HolidayPackageService {
     private final HolidayPackageRepository holidayPackageRepository;
@@ -26,37 +26,37 @@ public class HolidayPackageServiceImpl implements HolidayPackageService {
     @Override
     public List<HolidayPackageDTO> getAllHolidayPackage() {
         return holidayPackageRepository.findAll().stream()
+                .map(HolidayPackage::clone)
                 .map(HolidayPackageDTO::toHolidayPackageDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public HolidayPackageDTO getById(Long holidayPackageId) throws Exception {
+    public HolidayPackageDTO getById(Long holidayPackageId) {
         return holidayPackageRepository.findById(holidayPackageId)
+                .map(HolidayPackage::clone)
                 .map(HolidayPackageDTO::toHolidayPackageDTO)
-                .orElseThrow(() -> new Exception(String.format("Holiday package with id = " + holidayPackageId + " not found.")));
+                .orElseThrow(() -> new HolidayPackageNotFoundException(String.format("Holiday package with id = %s not found.", holidayPackageId)));
     }
 
     @Override
     public HolidayPackageDTO updateHolidayPackage(Long id, HolidayPackageDTO holidayPackageDTO) {
-        Optional<HolidayPackage> optionalHolidayPackage = holidayPackageRepository.findById(id);
-        if (optionalHolidayPackage.isPresent()) {
-            HolidayPackage holidayPackage = optionalHolidayPackage.get();
-            holidayPackage.setName(holidayPackageDTO.getName());
-            holidayPackage.setDescription(holidayPackageDTO.getDescription());
-            holidayPackage.setActivities(holidayPackageDTO.getActivities());
-            holidayPackageRepository.save(holidayPackage);
-        }
-        return null;
+        HolidayPackage holidayPackage = holidayPackageRepository.findById(id).map(hp -> hp.toBuilder()
+                        .name(holidayPackageDTO.getName())
+                        .description(holidayPackageDTO.getDescription())
+                        .activities(holidayPackageDTO.getActivities())
+                        .build())
+                .orElseThrow(() -> new HolidayPackageNotFoundException(String.format("Holiday package with id = %s not found.", id)));
+        holidayPackageRepository.save(holidayPackage);
+
+        return HolidayPackageDTO.toHolidayPackageDTO(holidayPackage);
     }
 
     @Override
-    public String deleteHolidayPackageById(Long holidayPackageId) {
-        try {
-            holidayPackageRepository.deleteById(holidayPackageId);
-        } catch (Exception e) {
-            throw new HolidayPackageNotFoundException("Holiday package with id = " + holidayPackageId + " not found!");
-        }
-        return "Holiday package with id = " + holidayPackageId + " was deleted successfully!";
+    public void deleteHolidayPackageById(Long holidayPackageId) {
+        HolidayPackage holidayPackage = holidayPackageRepository.findById(holidayPackageId)
+                .orElseThrow(() -> new HolidayPackageNotFoundException(String.format("Holiday package with id = %s not found.", holidayPackageId)));
+
+        holidayPackageRepository.delete(holidayPackage);
     }
 }
